--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: white;
+  transition: 0.5s;
+}
+body.night {
+  background-color:black;
+  color:white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-img {
-  max-width: 80%;
-  max-height: 600px;
 }
