--- a/src/components/AboutPopup.css
+++ b/src/components/AboutPopup.css
@@ -6,7 +6,7 @@
 	border-style: ridge;
 	border-radius: 6px;
 	opacity: 0;
-	margin: auto;
+	margin: 0;
 	margin-top: 10px;
 
 	transition: opacity 0.3s linear, visibility 0s 0.3s, margin-top 0.5s;
@@ -19,6 +19,7 @@
 }
 .about-popup.show {
 	visibility:visible;
+	margin:0;
 	margin-top: 30px;
 	width: fit-content;
 	max-height:80%;
