--- a/src/components/AboutPopup.css
+++ b/src/components/AboutPopup.css
@@ -8,6 +8,7 @@
 	opacity: 0;
 	margin: 0;
 	margin-top: 10px;
+	text-align: left;
 
 	transition: opacity 0.3s linear, visibility 0s 0.3s, margin-top 0.5s;
 	padding:10px 30px 40px;
@@ -33,4 +34,17 @@
 .about-popup-close {
 	float:right;
 	transition: opacity 0.5s;
+}
+
+.notes-toggle {
+	color: red;
+	cursor:pointer;
+}
+
+.notes-and-warnings {
+	text-align:left
+}
+.controls {
+	text-align:left;
+	list-style-type: none;
 }
