--- a/src/components/AboutPopup.css
+++ b/src/components/AboutPopup.css
@@ -7,11 +7,11 @@
 	border-radius: 6px;
 	width: fit-content;
 	opacity: 0;
-	margin: 0;
+	margin: 5px;
 	margin-top: 10px;
 	text-align: left;
 	overflow-y:auto;
-
+	max-height:80%;
 	transition: opacity 0.3s linear, visibility 0s 0.3s, margin-top 0.5s;
 	padding:10px 30px 40px;
 	left: 50%;
@@ -22,9 +22,7 @@
 }
 .about-popup.show {
 	visibility:visible;
-	margin:0;
 	margin-top: 30px;
-	max-height:80%;
 	opacity: 1;
 	transition: opacity 0.3s, margin-top 0.3s;
 }
